--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 .pnp.js
 
 # testing
-/coverage
+/coverages
 
 # production
 /build
@@ -22,3 +22,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# SSH Keys
+deploy_key
+*.pem
+*.key
